@@ -1,3 +1,9 @@
+2008-08-28  Holger Hans Peter Freyther <zecke@selfish.org>
+
+        Unreviewed compile fix
+
+        * platform/graphics/qt/GraphicsContextQt.cpp: Remove redefinitions
+
 2008-08-28  Adam Roben  <aroben@apple.com>
 
         Windows (and others?) build fix
